# rust-flashcards

./: Cargo.toml  README.md  csv to db.py  endings.csv  inflections.csv  inflections_db.sqlite  main_db.sqlite  output_database.sqlite  sampledata.csv  test.py  variantandtypelist.csv  word_list_with_conjugations.sqlite
assets/: index.html
src/: data.rs  db.rs  main.rs  utils.rs  verb.rs  words.rs
src/business_logic/: cli_test.rs  data.rs  mod.rs  utils.rs
src/in_memory/: mod.rs  routes.rs  state.rs  words.rs
templates/: flashcards.html
