[package]
name = "flashcard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tower-http = { version="0.5.0", features = ["cors"] }
axum = "0.7.0"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }