[package]
name = "flashcard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.5.0", features = ["fs", "cors"] } 
axum = "0.7"
rand = "0.8.5"
rusqlite = { version = "0.30.0", features = ["bundled"] }